# snakeoil

./: .commitlintrc.yml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  cliff.toml  example.inv  justfile  snakedown.example.toml
.github/: codecov.yml
.github/workflows/: check.yml  release-plz.yml  test.yml
src/: cli.rs  config.rs  fs.rs  lib.rs  main.rs
src/fs/: mod.rs  tree.rs
src/indexing/: cache.rs  fetch.rs
src/parsing/: class.rs  function.rs  index.rs  mod.rs  module.rs  utils.rs
src/parsing/sphinx/: inv_file.rs  mod.rs  types.rs
src/render/: args.rs  expr.rs  mod.rs
src/render/formats/: md.rs  mod.rs  zola.rs
src/render/front_matter/: mod.rs  plain.rs  zola.rs
tests/: main.rs
tests/rendered_full/: _index.md  bar.md  foo.md
tests/rendered_full/_private/: _index.md  internals.md
tests/rendered_full/sub1/: _index.md
tests/rendered_full/sub1/sub2/: one.md  two.md
tests/rendered_full/test_pkg/: bar.md
tests/rendered_full/test_pkg/_private/: _index.md  internals.md
tests/rendered_no_private/: _index.md  bar.md  foo.md
tests/rendered_no_private/sub1/: _index.md  mid.md
tests/rendered_no_private/sub1/sub2/: _index.md  two.md
tests/rendered_no_private/test_pkg/: _index.md
tests/rendered_no_private/test_pkg/sub1/: _index.md
tests/test_pkg/: __init__.py  bar.py  excluded_file.py  foo.py  stuff.toml  syntax_error.py
tests/test_pkg/_private/: __init__.py  internals.py
tests/test_pkg/data/: nothing_to_see_here.csv
tests/test_pkg/excluded_module/: __init__.py
tests/test_pkg/sub1/: __init__.py  ignore_me.json  mid.py
tests/test_pkg/sub1/sub2/: __init__.py  one.py  two.py
tests/zola_test_site/: config.toml
tests/zola_test_site/templates/: index.html  page.html
